--- a/front_end/package.json
+++ b/front_end/package.json
@@ -18,8 +18,10 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "fs": "^0.0.1-security",
+    "ipfs-http-client": "^54.0.0",
     "react": "^16.13.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "truffle": "5.1.39",
